--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Muthu kumar - Full Stack Developer</title>
-    <meta name="description" content="I'm having 7 years of experience in MEAN, MERN, JAM and LAMP stack.">
+    <meta name="description" content="I'm Muthu kumar, a passionate full stack developer. With expertise in both front-end and back-end technologies, I bring a holistic approach to building robust web applications.">
     <meta name=”robots” content="index, follow">
     <meta name="author" content="Muthu kumar">
     <meta name="keywords"
@@ -97,7 +97,7 @@
                             <span class="job">Full Stack Developer</span>
                         </div>
                         <div class="text">
-                            <p>I'm having 7 years of experience in MEAN, MERN, JAM and LAMP stack.</p>
+                            <p>I'm Muthu kumar, a passionate full stack developer. With expertise in both front-end and back-end technologies, I bring a holistic approach to building robust web applications.</p>
                         </div>
                         <div class="buttons">
                             <div class="orido_tm_boxed_button">
@@ -114,6 +114,8 @@
                 <div class="orido_tm_follow">
                     <span>Follow me:</span>
                     <ul>
+                        <li><a href="https://github.dev/muthukumar-sde/" target="_blank"><img class="svg"
+                            src="img/svg/social/github.svg" alt /></a></li>
                         <li><a href="https://in.linkedin.com/in/muthukumar-sde" target="_blank"><img class="svg"
                                     src="img/svg/social/linkedin.svg" alt /></a></li>
                         <li><a href="https://www.facebook.com/muthukumar.sde" target="_blank"><img class="svg"
@@ -152,10 +154,8 @@
                             <h3><span>About Me</span></h3>
                         </div>
                         <div class="text">
-                            <p>With 7 years experience as a professional Web developer, I have acquired the skills and
-                                knowledge necessary to make your project a success. I enjoy every step of the
-                                design/development
-                                process, from discussion and collaboration.</p>
+                            <p>I am a versatile full stack developer with a strong foundation in both front-end and back-end technologies. I have a deep understanding of various programming languages, frameworks, and databases. My passion for problem-solving and attention to detail enable me to create efficient and user-friendly applications.</p>
+                            <p>My journey as a developer began with a curiosity for problem-solving and a love for technology. Over the years, I have worked on a wide range of projects, including websites, web applications and enterprise software systems.</p>
                         </div>
                         <div class="short">
                             <!-- <div class="orido_tm_boxed_button">
@@ -179,11 +179,7 @@
                                 <h3><span>My expert<br />areas</span></h3>
                             </div>
                             <div class="text">
-                                <p>You can express yourself however you want and whenever you want, for free. You can
-                                    customize a template or make your own from scratch, with an immersive library at
-                                    your disposal. You can express yourself however you want and whenever you free.</p>
-                                <p>You can customize a template or make your own from scratch, with an immersive library
-                                    at your disposal.</p>
+                                <p>One of my strengths as a software developer is my ability to understand and translate complex requirements into practical and efficient code. I enjoy working collaboratively with cross-functional teams, including designers, product managers, and stakeholders, to create solutions that meet both user needs and business objectives. I'm comfortable with Agile methodologies, and I thrive in dynamic and fast-paced environments.</p> 
                             </div>
                             <!-- <div class="orido_tm_boxed_button">
                                 <a href="#">My Resume <img class="svg" src="img/svg/paper.svg" alt /></a>
@@ -384,8 +380,7 @@
                         </div>
                         <div class="text">
                             <h3>Let's work together</h3>
-                            <p>You can express yourself however you want and whenever you want, for free. You can
-                                customize a template or make your own.</p>
+                            <p>Thank you for visiting my website! If you have any questions, inquiries, or collaboration opportunities, I would love to hear from you. Please feel free to reach out using the contact information below.</p>
                         </div>
                         <div class="orido_tm_boxed_button">
                             <a href="https://wa.me/8675752575" target="_blank">Say Hello <img class="svg"
@@ -411,6 +406,8 @@
                             <div class="orido_tm_follow">
                                 <span>Follow me:</span>
                                 <ul>
+                                    <li><a href="https://github.dev/muthukumar-sde/" target="_blank"><img class="svg"
+                                        src="img/svg/social/github.svg" alt /></a></li>
                                     <li><a href="https://in.linkedin.com/in/muthukumar-sde" target="_blank"><img
                                                 class="svg" src="img/svg/social/linkedin.svg" alt /></a></li>
                                     <li><a href="https://www.facebook.com/muthukumar.sde" target="_blank"><img
