--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Muthu kumar - Full Stack Developer</title>
-    <meta name="description" content="I'm Muthu kumar, a passionate full stack developer. With expertise in both front-end and back-end technologies, I bring a holistic approach to building robust web applications.">
+    <meta name="description" content="Muthu Kumar, a skilled full stack developer with proficiency in front-end and back-end technologies, offers a comprehensive approach to creating resilient web applications.">
     <meta name=”robots” content="index, follow">
     <meta name="author" content="Muthu kumar">
     <meta name="keywords"
@@ -28,10 +28,21 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <!--[if lt IE 9]> <script type="text/javascript" src="js/modernizr.custom.js"></script> <![endif]-->
+    <meta name="google-site-verification" content="EPyHkl5EQ9uTda8yyOfLstatWudxSUzKgnVRI1GsuAY" />
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5J758FJN');</script>
+    <!-- End Google Tag Manager -->
 </head>
 
 <body class="dark">
-
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5J758FJN"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="preloader">
         <div class="loader_line"></div>
     </div>
